Update documentation section

--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@ https://templatemo.com/tm-578-first-portfolio
         
                             <!-- Start Recent Work -->
                             <div class="col-xl-3 col-md-4 col-sm-6 project finalReports">
-                                <a href="/documents/IT19035918 - Amarasiriwardena R.S - Final Report.pdf" target="_blank" class="service-work card border-0 text-white shadow-sm overflow-hidden mx-5 m-sm-0">
+                                <a href="./documents/IT19035918 - Amarasiriwardena R.S - Final Report.pdf" target="_blank" class="service-work card border-0 text-white shadow-sm overflow-hidden mx-5 m-sm-0">
                                     <img class="card-img" src="./images/documentation/pdfdownload2.jpg" alt="Card image">
                                     <div class="service-work-vertical card-img-overlay d-flex align-items-end">
                                         <div class="service-work-content text-left text-light">
