--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ https://templatemo.com/tm-578-first-portfolio
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link click-scroll" href="#section_6">Documetation</a>
+                            <a class="nav-link click-scroll" href="#section_6">Documentation</a>
                         </li>
 
                         <li class="nav-item">
@@ -133,10 +133,10 @@ https://templatemo.com/tm-578-first-portfolio
                     <div class="row">
 
                         <div class="col-lg-6 col-12">
-                            <img src="images/kidsbuddy/children1.jpg" class="about-image img-fluid" alt="">
-                            <!-- <video width="320" height="240" controls>
-                                <source src="video/Presentation New 1.mp4" type="video/mp4">
-                              </video> -->
+                            <video class="mt-6" width="570" height="340" controls autoplay>
+                                <source src="https://drive.google.com/uc?export=view&id=1gM_KRqI6ZisG-jzoODu8HQ_I_QEcVVzC" type="video/mp4">
+                            </video>
+                            <!-- <img src="images/kidsbuddy/children1.jpg" class="about-image img-fluid" alt=""> -->
                         </div>
 
                         <div class="col-lg-6 col-12 mt-5 mt-lg-0">
@@ -157,13 +157,13 @@ https://templatemo.com/tm-578-first-portfolio
                             </div>
                         </div>
 
-                        <div class="col-lg-12 col-12 video1">
+                        <!-- <div class="col-lg-12 col-12 video1">
                             <center>
                                 <video class="mt-6" width="570" height="340" controls>
-                                    <source src="video/Presentation New 1.mp4" type="video/mp4">
+                                    <source src="https://drive.google.com/uc?export=view&id=1gM_KRqI6ZisG-jzoODu8HQ_I_QEcVVzC" type="video/mp4">
                                 </video>
                             </center>
-                        </div>
+                        </div> -->
 
                     </div>
                 </div>
@@ -724,10 +724,10 @@ https://templatemo.com/tm-578-first-portfolio
                                     </div>
                                 </a>
                             </div><!-- End Recent Work -->
-        
+
                             <!-- Start Recent Work -->
                             <div class="col-xl-3 col-md-4 col-sm-6 project finalReports">
-                                <a href="/documents/IT19035918 - Amarasiriwardena R.S - Final Report.pdf" target="_blank" class="service-work card border-0 text-white shadow-sm overflow-hidden mx-5 m-sm-0">
+                                <a href="https://drive.google.com/uc?export=view&id=1gVrQsZLjMKVQTEl4Z9Pd_6KNOdtcTAqp" target="_blank" class="service-work card border-0 text-white shadow-sm overflow-hidden mx-5 m-sm-0">
                                     <img class="card-img" src="./images/documentation/pdfdownload2.jpg" alt="Card image">
                                     <div class="service-work-vertical card-img-overlay d-flex align-items-end">
                                         <div class="service-work-content text-left text-light">
