technologies and team added

--- a/index.html
+++ b/index.html
@@ -417,32 +417,33 @@ https://templatemo.com/tm-578-first-portfolio
                 </div>
             </section>
 
+            
             <section class="clients section-padding" id="section_demo">
                 <div class="container">
                     <div class="row align-items-center">
 
                         <div class="col-lg-12 col-12">
-                            <h3 class="text-center mb-5">technologies that used </h3>
+                            <h3 class="text-center mb-5">Technologies That Used </h3>
                         </div>
 
                         <div class="col-lg-2 col-4 ms-auto clients-item-height">
-                            <img src="images/clients/cachet.svg" class="clients-image img-fluid" alt="">
+                            <img src="images/clients/android.webp" class="clients-image img-fluid" alt="">
                         </div>
 
                         <div class="col-lg-2 col-4 clients-item-height">
-                            <img src="images/clients/guitar-center.svg" class="clients-image img-fluid" alt="">
+                            <img src="images/clients/python.png" class="clients-image img-fluid" alt="">
                         </div>
 
                         <div class="col-lg-2 col-4 clients-item-height">
-                            <img src="images/clients/tokico.svg" class="clients-image img-fluid" alt="">
+                            <img src="images/clients/tensorflow.png" class="clients-image img-fluid" alt="">
                         </div>
 
                         <div class="col-lg-2 col-4 clients-item-height">
-                            <img src="images/clients/shopify.svg" class="clients-image img-fluid" alt="">
+                            <img src="images/clients/rasa.webp" class="clients-image img-fluid" alt="">
                         </div>
 
                         <div class="col-lg-2 col-4 me-auto clients-item-height">
-                            <img src="images/clients/profil-rejser.svg" class="clients-image img-fluid" alt="">
+                            <img src="images/clients/retro.png" class="clients-image img-fluid" alt="">
                         </div>
 
                     </div>
@@ -1038,24 +1039,25 @@ https://templatemo.com/tm-578-first-portfolio
                             <div class="col-lg-6">
                                 <h2 class="h2 py-5 typo-space-line">Our Team</h2>
                                 <p class="text-muted light-300">
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                    Let's take a glimpse on Kids Buddy team
                                 </p>
                             </div>
 
                             <div class="col-lg-7 row">
                                 <div class="team-member col-md-5">
-                                    <img class="team-member-img img-fluid rounded-circle p-4" src="./images/team/team-02.jpg" alt="Card image">
+                                    <img class="team-member-img img-fluid rounded-circle p-4" src="./images/team/rrubaa.jfif" alt="Card image">
                                     <ul class="team-member-caption list-unstyled text-center pt-4 text-muted light-300">
-                                        <li>Jane Doe</li>
-                                        <li>Media Development</li>
+                                        <li>Rubaa Panchendrarajan</li>
+                                        <li>Supervisor</li>
+                                        <li>Lecturer - CSNE</li>
                                     </ul>
                                 </div>
                                 <div class="team-member col-md-5">
-                                    <img class="team-member-img img-fluid rounded-circle p-4" src="./images/team/team-03.jpg" alt="Card image">
+                                    <img class="team-member-img img-fluid rounded-circle p-4" src="./images/team/thilini.jfif" alt="Card image">
                                     <ul class="team-member-caption list-unstyled text-center pt-4 text-muted light-300">
-                                        <li>Sam</li>
-                                        <li>Developer</li>
+                                        <li>Thilini Buddhika Jayasinghe</li>
+                                        <li>Co-supervisor</li>
+                                        <li>Lecturer - CSNE</li>
                                     </ul>
                                 </div>
                             </div>
@@ -1067,31 +1069,35 @@ https://templatemo.com/tm-578-first-portfolio
 
                             <div class="col-lg-12 row">
                                 <div class="team-member col-md-3">
-                                    <img class="team-member-img img-fluid rounded-circle p-4" src="./images/team/team-01.jpg" alt="Card image">
+                                    <img class="team-member-img img-fluid rounded-circle p-4" src="./images/team/raveena.jpg" alt="Card image">
                                     <ul class="team-member-caption list-unstyled text-center pt-4 text-muted light-300">
-                                        <li>John Doe</li>
-                                        <li>Business Development</li>
+                                        <li>Raveena Amarasiriwardena</li>
+                                        <li>SE Undergarduate</li>
+                                        <li>Faculty of Computing, Malabe</li>
                                     </ul>
                                 </div>
                                 <div class="team-member col-md-3">
-                                    <img class="team-member-img img-fluid rounded-circle p-4" src="./images/team/team-01.jpg" alt="Card image">
+                                    <img class="team-member-img img-fluid rounded-circle p-4" src="./images/team/gali.jfif" alt="Card image">
                                     <ul class="team-member-caption list-unstyled text-center pt-4 text-muted light-300">
-                                        <li>John Doe</li>
-                                        <li>Business Development</li>
+                                        <li>Galikha Mannage</li>
+                                        <li>SE Undergarduate</li>
+                                        <li>Faculty of Computing, Malabe</li>
                                     </ul>
                                 </div>
                                 <div class="team-member col-md-3">
-                                    <img class="team-member-img img-fluid rounded-circle p-4" src="./images/team/team-02.jpg" alt="Card image">
+                                    <img class="team-member-img img-fluid rounded-circle p-4" src="./images/team/piyumi.jpg" alt="Card image">
                                     <ul class="team-member-caption list-unstyled text-center pt-4 text-muted light-300">
-                                        <li>Jane Doe</li>
-                                        <li>Media Development</li>
+                                        <li>Piyumi Fernando</li>
+                                        <li>SE Undergarduate</li>
+                                        <li>Faculty of Computing, Malabe</li>
                                     </ul>
                                 </div>
                                 <div class="team-member col-md-3">
-                                    <img class="team-member-img img-fluid rounded-circle p-4" src="./images/team/team-03.jpg" alt="Card image">
+                                    <img class="team-member-img img-fluid rounded-circle p-4" src="./images/team/piumi.jpg" alt="Card image">
                                     <ul class="team-member-caption list-unstyled text-center pt-4 text-muted light-300">
-                                        <li>Sam</li>
-                                        <li>Developer</li>
+                                        <li>Piumi Ranawansha</li>
+                                        <li>SE Undergarduate</li>
+                                        <li>Faculty of Computing, Malabe</li>
                                     </ul>
                                 </div>
                             </div>
@@ -1117,37 +1123,38 @@ https://templatemo.com/tm-578-first-portfolio
 
                         <div class="col-lg-6 col-md-6 col-12 pe-lg-0">
                             <div class="contact-info contact-info-border-start d-flex flex-column">
-                                <strong class="site-footer-title d-block mb-3">Services</strong>
-
-                                <ul class="footer-menu">
-                                    <li class="footer-menu-item"><a href="#" class="footer-menu-link">Websites</a></li>
-
-                                    <li class="footer-menu-item"><a href="#" class="footer-menu-link">Branding</a></li>
-
-                                    <li class="footer-menu-item"><a href="#" class="footer-menu-link">Ecommerce</a></li>
-
-                                    <li class="footer-menu-item"><a href="#" class="footer-menu-link">SEO</a></li>
-                                </ul>
-
-                                <strong class="site-footer-title d-block mt-4 mb-3">Stay connected</strong>
+                                <strong class="site-footer-title d-block mt-4 mb-3">Raveena Amarasiriwardena</strong>
 
                                 <ul class="social-icon">
-                                    <li class="social-icon-item"><a href="https://twitter.com/minthu" class="social-icon-link bi-twitter"></a></li>
+                                    <li class="social-icon-item"><a href="#" class="social-icon-link bi-facebook"></a></li>
 
                                     <li class="social-icon-item"><a href="#" class="social-icon-link bi-instagram"></a></li>
 
-                                    <li class="social-icon-item"><a href="#" class="social-icon-link bi-pinterest"></a></li>
+                                    <li class="social-icon-item"><a href="#" class="social-icon-link bi-linkedin"></a></li>
 
-                                    <li class="social-icon-item"><a href="https://www.youtube.com/templatemo" class="social-icon-link bi-youtube"></a></li>
+                                    <!-- <li class="social-icon-item"><a href="https://www.youtube.com/templatemo" class="social-icon-link bi-youtube"></a></li> -->
+                                </ul>
+                                <strong class="site-footer-title d-block mt-4 mb-3">Contact via:</strong>
+
+                                <strong class="site-footer-title d-block mt-4 mb-3">Galikha Mannage</strong>
+
+                                <ul class="social-icon">
+                                    <li class="social-icon-item"><a href="#" class="social-icon-link bi-facebook"></a></li>
+
+                                    <li class="social-icon-item"><a href="#" class="social-icon-link bi-instagram"></a></li>
+
+                                    <li class="social-icon-item"><a href="#" class="social-icon-link bi-linkedin"></a></li>
+
+                                    <!-- <li class="social-icon-item"><a href="https://www.youtube.com/templatemo" class="social-icon-link bi-youtube"></a></li> -->
                                 </ul>
 
-                                <strong class="site-footer-title d-block mt-4 mb-3">Start a project</strong>
+                                <strong class="site-footer-title d-block mt-4 mb-3">Contact via:</strong>
 
-                                <p class="mb-0">I’m available for freelance projects</p>
+                                <!-- <p class="mb-0">I’m available for freelance projects</p> -->
                             </div>
                         </div>
 
-                        <div class="col-lg-6 col-md-6 col-12 ps-lg-0">
+                        <!-- <div class="col-lg-6 col-md-6 col-12 ps-lg-0">
                             <div class="contact-info d-flex flex-column">
                                 <strong class="site-footer-title d-block mb-3">About</strong>
 
@@ -1171,12 +1178,43 @@ https://templatemo.com/tm-578-first-portfolio
                                     </a>
                                 </p>
                             </div>
+                        </div> -->
+                        <div class="col-lg-6 col-md-6 col-12 pe-lg-0">
+                            <div class="contact-info contact-info-border-start d-flex flex-column">
+                                <strong class="site-footer-title d-block mt-4 mb-3">Piyumi Fernando</strong>
+
+                                <ul class="social-icon">
+                                    <li class="social-icon-item"><a href="#" class="social-icon-link bi-facebook"></a></li>
+
+                                    <li class="social-icon-item"><a href="#" class="social-icon-link bi-instagram"></a></li>
+
+                                    <li class="social-icon-item"><a href="#" class="social-icon-link bi-linkedin"></a></li>
+
+                                    <!-- <li class="social-icon-item"><a href="https://www.youtube.com/templatemo" class="social-icon-link bi-youtube"></a></li> -->
+                                </ul>
+                                <strong class="site-footer-title d-block mt-4 mb-3">Contact via:</strong>
+
+                                <strong class="site-footer-title d-block mt-4 mb-3">Piumi Ranawansha</strong>
+
+                                <ul class="social-icon">
+                                    <li class="social-icon-item"><a href="#" class="social-icon-link bi-facebook"></a></li>
+
+                                    <li class="social-icon-item"><a href="#" class="social-icon-link bi-instagram"></a></li>
+
+                                    <li class="social-icon-item"><a href="#" class="social-icon-link bi-linkedin"></a></li>
+
+                                    <!-- <li class="social-icon-item"><a href="https://www.youtube.com/templatemo" class="social-icon-link bi-youtube"></a></li> -->
+                                </ul>
+
+                                <strong class="site-footer-title d-block mt-4 mb-3">Contact via:</strong>
+
+                                <!-- <p class="mb-0">I’m available for freelance projects</p> -->
+                            </div>
                         </div>
 
                     </div>
                 </div>
             </section>
-
         </main>
 
         <footer class="site-footer">
