--- a/index.html
+++ b/index.html
@@ -1015,7 +1015,7 @@ https://templatemo.com/tm-578-first-portfolio
                             </div><!-- End Recent Work -->
                             <!-- Start Recent Work -->
                             <div class="col-xl-3 col-md-4 col-sm-6 project otherDocuments">
-                                <a href="https://drive.google.com/uc?export=view&id=" target="_blank" class="service-work card border-0 text-white shadow-sm overflow-hidden mx-5 m-sm-0">
+                                <a href="https://drive.google.com/uc?export=view&id=1Zb5yD94Z2HBgaR6bP_BE4_u93loBboXZ" target="_blank" class="service-work card border-0 text-white shadow-sm overflow-hidden mx-5 m-sm-0">
                                     <img class="card-img" src="./images/documentation/pdfdownload2.jpg" alt="Card image">
                                     <div class="service-work-vertical card-img-overlay d-flex align-items-end">
                                         <div class="service-work-content text-left text-light">
@@ -1028,7 +1028,7 @@ https://templatemo.com/tm-578-first-portfolio
 
                             <!-- Start Recent Work -->
                             <div class="col-xl-3 col-md-4 col-sm-6 project otherDocuments">
-                                <a href="https://drive.google.com/uc?export=view&id=" target="_blank" class="service-work card border-0 text-white shadow-sm overflow-hidden mx-5 m-sm-0">
+                                <a href="https://drive.google.com/uc?export=view&id=1KP4KK-weUDM1teZom6Avs22BFj5S_eaL" target="_blank" class="service-work card border-0 text-white shadow-sm overflow-hidden mx-5 m-sm-0">
                                     <img class="card-img" src="./images/documentation/pdfdownload2.jpg" alt="Card image">
                                     <div class="service-work-vertical card-img-overlay d-flex align-items-end">
                                         <div class="service-work-content text-left text-light">
