project proposal report added

--- a/index.html
+++ b/index.html
@@ -938,6 +938,21 @@ https://templatemo.com/tm-578-first-portfolio
                                     </div>
                                 </a>
                             </div><!-- End Recent Work -->
+                           
+
+                            <!-- Start Recent Work -->
+                            <div class="col-xl-3 col-md-4 col-sm-6 project proposalDocuments">
+                                <a href="https://drive.google.com/uc?export=view&id=1_bqOnrFM_m_Y2GxoiRLsqKW-39ZZ392x" target="_blank" class="service-work card border-0 text-white shadow-sm overflow-hidden mx-5 m-sm-0">
+                                    <img class="card-img" src="./images/documentation/pdfdownload2.jpg" alt="Card image">
+                                    <div class="service-work-vertical card-img-overlay d-flex align-items-end">
+                                        <div class="service-work-content text-left text-light">
+                                            <span class="btn btn-outline-light rounded-pill mb-lg-3 px-lg-4 light-300">Research Proposal</span>
+                                            <p class="card-text">Mannage G. - IT19186634</p>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div><!-- End Recent Work -->
+
                             <!-- Start Recent Work -->
                             <div class="col-xl-3 col-md-4 col-sm-6 project proposalDocuments">
                                 <a href="https://drive.google.com/uc?export=view&id=10Hp7lLw33dWANCAau-_6UhwKoKRDGe31" target="_blank" class="service-work card border-0 text-white shadow-sm overflow-hidden mx-5 m-sm-0">
