Update app app Features section

--- a/index.html
+++ b/index.html
@@ -510,8 +510,8 @@ https://templatemo.com/tm-578-first-portfolio
                                     </div>
 
                                     <div class="col-lg-6 col-6 featured-border-start ps-5 pt-4">
-                                        <p class="featured-text"></p>
-                                        <strong class="featured-numbers"></strong>
+                                        <p class="featured-text">Available mobile platform in</p>
+                                        <strong class="featured-numbers">Android</strong>
 
                                     </div>
                                 </div>
@@ -1121,6 +1121,7 @@ https://templatemo.com/tm-578-first-portfolio
                                             <li>Rubaa Panchendrarajan</li>
                                             <li>Supervisor</li>
                                             <li>Lecturer - CSNE</li>
+                                            <li>Faculty of Computing, Malabe</li>
                                         </ul>
                                     </div>
                                     <div class="team-member col-md-5">
@@ -1129,6 +1130,7 @@ https://templatemo.com/tm-578-first-portfolio
                                             <li>Thilini Buddhika Jayasinghe</li>
                                             <li>Co-supervisor</li>
                                             <li>Lecturer - CSNE</li>
+                                            <li>Faculty of Computing, Malabe</li>
                                         </ul>
                                     </div>
                                 </div>
