Update index.html file

--- a/index.html
+++ b/index.html
@@ -918,7 +918,7 @@ https://templatemo.com/tm-578-first-portfolio
                                     <div class="service-work-vertical card-img-overlay d-flex align-items-end">
                                         <div class="service-work-content text-left text-light">
                                             <span class="btn btn-outline-light rounded-pill mb-lg-3 px-lg-4 light-300">Final Individual Report</span>
-                                            <p class="card-text">R.S. Amarasiriwardena - IT19035918</p>
+                                            <p class="card-text">Amarasiriwardena R.S. - IT19035918</p>
                                         </div>
                                     </div>
                                 </a>
@@ -1049,7 +1049,7 @@ https://templatemo.com/tm-578-first-portfolio
                                     <div class="service-work-vertical card-img-overlay d-flex align-items-end">
                                         <div class="service-work-content text-left text-light">
                                             <span class="btn btn-outline-light rounded-pill mb-lg-3 px-lg-4 light-300">Research Proposal</span>
-                                            <p class="card-text">R.S. Amarasiriwardena - IT19035918</p>
+                                            <p class="card-text">Amarasiriwardena R.S. - IT19035918</p>
                                         </div>
                                     </div>
                                 </a>
@@ -1102,7 +1102,7 @@ https://templatemo.com/tm-578-first-portfolio
                                     <div class="service-work-vertical card-img-overlay d-flex align-items-end">
                                         <div class="service-work-content text-left text-light">
                                             <span class="btn btn-outline-light rounded-pill mb-lg-3 px-lg-4 light-300">Status Document 1</span>
-                                            <p class="card-text">R.S. Amarasiriwardena - IT19035918</p>
+                                            <p class="card-text">Amarasiriwardena R.S. - IT19035918</p>
                                         </div>
                                     </div>
                                 </a>
@@ -1115,7 +1115,7 @@ https://templatemo.com/tm-578-first-portfolio
                                     <div class="service-work-vertical card-img-overlay d-flex align-items-end">
                                         <div class="service-work-content text-left text-light">
                                             <span class="btn btn-outline-light rounded-pill mb-lg-3 px-lg-4 light-300">Status Document 2</span>
-                                            <p class="card-text">R.S. Amarasiriwardena - IT19035918</p>
+                                            <p class="card-text">Amarasiriwardena R.S. - IT19035918</p>
                                         </div>
                                     </div>
                                 </a>
@@ -1128,7 +1128,7 @@ https://templatemo.com/tm-578-first-portfolio
                                     <div class="service-work-vertical card-img-overlay d-flex align-items-end">
                                         <div class="service-work-content text-left text-light">
                                             <span class="btn btn-outline-light rounded-pill mb-lg-3 px-lg-4 light-300">Research Logbook</span>
-                                            <p class="card-text">R.S. Amarasiriwardena - IT19035918</p>
+                                            <p class="card-text">Amarasiriwardena R.S. - IT19035918</p>
                                         </div>
                                     </div>
                                 </a>
@@ -1430,11 +1430,7 @@ https://templatemo.com/tm-578-first-portfolio
 
                                     <li class="social-icon-item"><a href="#" class="social-icon-link bi-instagram"></a></li> -->
 
-<<<<<<< HEAD
-                                    <li class="social-icon-item"><a href="www.linkedin.com/in/piumi-ranawansha-84a139208" class="social-icon-link bi-linkedin"></a></li>
-=======
-                                    <li class="social-icon-item"><a href="#" target="_blank" class="social-icon-link bi-linkedin"></a></li>
->>>>>>> 3a36cb609521524e3b734e2c32dde3b2a8dcde91
+                                    <li class="social-icon-item"><a href="https://www.linkedin.com/in/piumi-ranawansha-84a139208" target="_blank" class="social-icon-link bi-linkedin"></a></li>
 
                                     <!-- <li class="social-icon-item"><a href="https://www.youtube.com/templatemo" class="social-icon-link bi-youtube"></a></li> -->
                                 </ul>
