--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ https://templatemo.com/tm-578-first-portfolio
                             </div>
 
                             <div class="row pt-lg-5">
-                                <div class="col-lg-7 col-12">
+                                <div class="col-lg-12 col-12">
                                     <div class="services-thumb">
                                         <div class="d-flex flex-wrap align-items-center border-bottom mb-4 pb-3">
                                             <h3 class="mb-0">Literature Survey</h3>
@@ -369,7 +369,7 @@ https://templatemo.com/tm-578-first-portfolio
                                     </div>
                                 </div>
 
-                                <div class="col-lg-5 col-12">
+                                <div class="col-lg-12 col-12">
                                     <div class="services-thumb">
                                         <div class="d-flex flex-wrap align-items-center border-bottom mb-4 pb-3">
                                             <h3 class="mb-0">Research Gap</h3>
@@ -1407,97 +1407,99 @@ https://templatemo.com/tm-578-first-portfolio
                 <!-- End Venue Section -->
             </section>
 
-            <section class="contact section-padding featured" id="section_7">
-                <div class="container">
-                    <div class="row">
+            <section id="section_7">
+                <section class="contact section-padding featured">
+                    <div class="container">
+                        <div class="row">
 
-                        <div class="col-lg-12 col-md-8 col-12">
-                            <div class="section-title-wrap d-flex justify-content-center align-items-center mb-5">
-                                <!-- <img src="images/aerial-view-man-using-computer-laptop-wooden-table.jpg" class="avatar-image img-fluid" alt=""> -->
+                            <div class="col-lg-12 col-md-8 col-12">
+                                <div class="section-title-wrap d-flex justify-content-center align-items-center mb-5">
+                                    <!-- <img src="images/aerial-view-man-using-computer-laptop-wooden-table.jpg" class="avatar-image img-fluid" alt=""> -->
 
-                                <h2 class="text-white ms-4 mb-0">Contact Us</h2>
+                                    <h2 class="text-white ms-4 mb-0">Contact Us</h2>
+                                </div>
                             </div>
-                        </div>
 
-                        <div class="clearfix"></div>
+                            <div class="clearfix"></div>
 
-                        <div class="col-lg-6 col-md-6 col-12 pe-lg-0">
-                            <div class="contact-info contact-info-border-start d-flex flex-column">
-                                <strong class="site-footer-title d-block mt-4 mb-3">Raveena Amarasiriwardena</strong>
+                            <div class="col-lg-6 col-md-6 col-12 pe-lg-0">
+                                <div class="contact-info contact-info-border-start d-flex flex-column">
+                                    <strong class="site-footer-title d-block mt-4 mb-3">Raveena Amarasiriwardena</strong>
 
-                                <ul class="social-icon">
-                                    <!-- <li class="social-icon-item"><a href="#" class="social-icon-link bi-facebook"></a></li>
+                                    <ul class="social-icon">
+                                        <!-- <li class="social-icon-item"><a href="#" class="social-icon-link bi-facebook"></a></li>
 
-                                    <li class="social-icon-item"><a href="#" class="social-icon-link bi-instagram"></a></li> -->
+                                        <li class="social-icon-item"><a href="#" class="social-icon-link bi-instagram"></a></li> -->
 
-                                    <li class="social-icon-item"><a href="https://www.linkedin.com/in/raveena-amarasiriwardena" target="_blank" class="social-icon-link bi-linkedin"></a></li>
+                                        <li class="social-icon-item"><a href="https://www.linkedin.com/in/raveena-amarasiriwardena" target="_blank" class="social-icon-link bi-linkedin"></a></li>
 
-                                    <!-- <li class="social-icon-item"><a href="https://www.youtube.com/templatemo" class="social-icon-link bi-youtube"></a></li> -->
-                                </ul>
-                                <strong class="site-footer-title d-block mt-4 mb-3">Contact via:</strong> 
-                                <p class="site-footer-title d-block mt-2 mb-1" style="text-transform: lowercase">Email: amarasiriwardenar@gmail.com</p> 
-                                <p class="site-footer-title d-block mt-2 mb-1" style="text-transform: lowercase">Phone number: +(94) 777 894 678</p> 
+                                        <!-- <li class="social-icon-item"><a href="https://www.youtube.com/templatemo" class="social-icon-link bi-youtube"></a></li> -->
+                                    </ul>
+                                    <strong class="site-footer-title d-block mt-4 mb-3">Contact via:</strong> 
+                                    <p class="site-footer-title d-block mt-2 mb-1" style="text-transform: lowercase">Email: amarasiriwardenar@gmail.com</p> 
+                                    <p class="site-footer-title d-block mt-2 mb-1" style="text-transform: lowercase">Phone number: +(94) 777 894 678</p> 
 
-                                <strong class="site-footer-title d-block mt-4 mb-3">Galikha Mannage</strong>
+                                    <strong class="site-footer-title d-block mt-4 mb-3">Galikha Mannage</strong>
 
-                                <ul class="social-icon">
-                                    <!-- <li class="social-icon-item"><a href="#" class="social-icon-link bi-facebook"></a></li>
+                                    <ul class="social-icon">
+                                        <!-- <li class="social-icon-item"><a href="#" class="social-icon-link bi-facebook"></a></li>
 
-                                    <li class="social-icon-item"><a href="#" class="social-icon-link bi-instagram"></a></li> -->
+                                        <li class="social-icon-item"><a href="#" class="social-icon-link bi-instagram"></a></li> -->
 
-                                    <li class="social-icon-item"><a href="https://www.linkedin.com/in/galikha-mannage-280604208/" class="social-icon-link bi-linkedin"></a></li>
+                                        <li class="social-icon-item"><a href="https://www.linkedin.com/in/galikha-mannage-280604208/" class="social-icon-link bi-linkedin"></a></li>
 
 
-                                    <!-- <li class="social-icon-item"><a href="https://www.youtube.com/templatemo" class="social-icon-link bi-youtube"></a></li> -->
-                                </ul>
+                                        <!-- <li class="social-icon-item"><a href="https://www.youtube.com/templatemo" class="social-icon-link bi-youtube"></a></li> -->
+                                    </ul>
 
-                                <strong class="site-footer-title d-block mt-4 mb-3">Contact via:</strong>
-                                <p class="site-footer-title d-block mt-2 mb-1" style="text-transform: lowercase">Email: galimannage6.gm@gmail.com</p> 
-                                <p class="site-footer-title d-block mt-2 mb-1" style="text-transform: lowercase">Phone number: +(94) 767 007 516</p> 
+                                    <strong class="site-footer-title d-block mt-4 mb-3">Contact via:</strong>
+                                    <p class="site-footer-title d-block mt-2 mb-1" style="text-transform: lowercase">Email: galimannage6.gm@gmail.com</p> 
+                                    <p class="site-footer-title d-block mt-2 mb-1" style="text-transform: lowercase">Phone number: +(94) 767 007 516</p> 
 
-                                <!-- <p class="mb-0">I’m available for freelance projects</p> -->
+                                    <!-- <p class="mb-0">I’m available for freelance projects</p> -->
+                                </div>
                             </div>
-                        </div>
 
-                        <div class="col-lg-6 col-md-6 col-12 pe-lg-0">
-                            <div class="contact-info contact-info-border-start d-flex flex-column">
-                                <strong class="site-footer-title d-block mt-4 mb-3">Piyumi Fernando</strong>
+                            <div class="col-lg-6 col-md-6 col-12 pe-lg-0">
+                                <div class="contact-info contact-info-border-start d-flex flex-column">
+                                    <strong class="site-footer-title d-block mt-4 mb-3">Piyumi Fernando</strong>
 
-                                <ul class="social-icon">
-                                    <!-- <li class="social-icon-item"><a href="#" class="social-icon-link bi-facebook"></a></li>
+                                    <ul class="social-icon">
+                                        <!-- <li class="social-icon-item"><a href="#" class="social-icon-link bi-facebook"></a></li>
 
-                                    <li class="social-icon-item"><a href="#" class="social-icon-link bi-instagram"></a></li> -->
+                                        <li class="social-icon-item"><a href="#" class="social-icon-link bi-instagram"></a></li> -->
 
-                                    <li class="social-icon-item"><a href="https://www.linkedin.com/in/piyumi-fernando-2917a916a" target="_blank" class="social-icon-link bi-linkedin"></a></li>
+                                        <li class="social-icon-item"><a href="https://www.linkedin.com/in/piyumi-fernando-2917a916a" target="_blank" class="social-icon-link bi-linkedin"></a></li>
 
-                                    <!-- <li class="social-icon-item"><a href="https://www.youtube.com/templatemo" class="social-icon-link bi-youtube"></a></li> -->
-                                </ul>
-                                <strong class="site-footer-title d-block mt-4 mb-3">Contact via:</strong>
-                                <p class="site-footer-title d-block mt-2 mb-1" style="text-transform: lowercase">Email: piyumifernando1996@gmail.com</p> 
-                                <p class="site-footer-title d-block mt-2 mb-1" style="text-transform: lowercase">Phone number: +(94) 717 314 779</p> 
+                                        <!-- <li class="social-icon-item"><a href="https://www.youtube.com/templatemo" class="social-icon-link bi-youtube"></a></li> -->
+                                    </ul>
+                                    <strong class="site-footer-title d-block mt-4 mb-3">Contact via:</strong>
+                                    <p class="site-footer-title d-block mt-2 mb-1" style="text-transform: lowercase">Email: piyumifernando1996@gmail.com</p> 
+                                    <p class="site-footer-title d-block mt-2 mb-1" style="text-transform: lowercase">Phone number: +(94) 717 314 779</p> 
 
-                                <strong class="site-footer-title d-block mt-4 mb-3">Piumi Ranawansha</strong>
+                                    <strong class="site-footer-title d-block mt-4 mb-3">Piumi Ranawansha</strong>
 
-                                <ul class="social-icon">
-                                    <!-- <li class="social-icon-item"><a href="#" class="social-icon-link bi-facebook"></a></li>
+                                    <ul class="social-icon">
+                                        <!-- <li class="social-icon-item"><a href="#" class="social-icon-link bi-facebook"></a></li>
 
-                                    <li class="social-icon-item"><a href="#" class="social-icon-link bi-instagram"></a></li> -->
+                                        <li class="social-icon-item"><a href="#" class="social-icon-link bi-instagram"></a></li> -->
 
-                                    <li class="social-icon-item"><a href="https://www.linkedin.com/in/piumi-ranawansha-84a139208" target="_blank" class="social-icon-link bi-linkedin"></a></li>
+                                        <li class="social-icon-item"><a href="https://www.linkedin.com/in/piumi-ranawansha-84a139208" target="_blank" class="social-icon-link bi-linkedin"></a></li>
 
-                                    <!-- <li class="social-icon-item"><a href="https://www.youtube.com/templatemo" class="social-icon-link bi-youtube"></a></li> -->
-                                </ul>
+                                        <!-- <li class="social-icon-item"><a href="https://www.youtube.com/templatemo" class="social-icon-link bi-youtube"></a></li> -->
+                                    </ul>
 
-                                <strong class="site-footer-title d-block mt-4 mb-3">Contact via:</strong>
-                                <p class="site-footer-title d-block mt-2 mb-1" style="text-transform: lowercase">Email: piumiranawansha@gmail.com</p> 
-                                <p class="site-footer-title d-block mt-2 mb-1" style="text-transform: lowercase">Phone number: +(94) 712 932 322</p> 
+                                    <strong class="site-footer-title d-block mt-4 mb-3">Contact via:</strong>
+                                    <p class="site-footer-title d-block mt-2 mb-1" style="text-transform: lowercase">Email: piumiranawansha@gmail.com</p> 
+                                    <p class="site-footer-title d-block mt-2 mb-1" style="text-transform: lowercase">Phone number: +(94) 712 932 322</p> 
 
-                                <!-- <p class="mb-0">I’m available for freelance projects</p> -->
+                                    <!-- <p class="mb-0">I’m available for freelance projects</p> -->
+                                </div>
                             </div>
-                        </div>
 
+                        </div>
                     </div>
-                </div>
+                </section>
             </section>
         </main>
 
