--- a/index.html
+++ b/index.html
@@ -1446,7 +1446,7 @@ https://templatemo.com/tm-578-first-portfolio
 
                                         <li class="social-icon-item"><a href="#" class="social-icon-link bi-instagram"></a></li> -->
 
-                                        <li class="social-icon-item"><a href="https://www.linkedin.com/in/galikha-mannage-280604208/" class="social-icon-link bi-linkedin"></a></li>
+                                        <li class="social-icon-item"><a href="https://www.linkedin.com/in/galikha-mannage-280604208/" target="_blank" class="social-icon-link bi-linkedin"></a></li>
 
 
                                         <!-- <li class="social-icon-item"><a href="https://www.youtube.com/templatemo" class="social-icon-link bi-youtube"></a></li> -->
