Update Achievements section

--- a/index.html
+++ b/index.html
@@ -1369,7 +1369,7 @@ https://templatemo.com/tm-578-first-portfolio
                             <div class="venue-gallery">
                                 <!-- <a href="images/achievements/NBQSA.png" target="_blank" class="glightbox" data-gall="venue-gallery"> -->
                                 <img src="images/achievements/NBQSA.png" alt="" class="img-fluid">
-                                <div class="img-fluid mt-5" style="text-align: center;">Particpated for the NBQSA 2022</div>
+                                <div class="img-fluid mt-5" style="text-align: center;">Participated for the NBQSA 2022</div>
                                 </a>
                             </div>
                             </div>
