Update Our Team section

--- a/index.html
+++ b/index.html
@@ -1314,6 +1314,7 @@ https://templatemo.com/tm-578-first-portfolio
                                         <img class="team-member-img img-fluid rounded-circle p-4" src="./images/team/raveena1.png" alt="Card image">
                                         <ul class="team-member-caption list-unstyled text-center pt-4 text-muted light-300">
                                             <li>Raveena Amarasiriwardena</li>
+                                            <li>Leader</li>
                                             <li>SE Undergarduate</li>
                                             <li>Faculty of Computing, Malabe</li>
                                         </ul>
@@ -1322,6 +1323,7 @@ https://templatemo.com/tm-578-first-portfolio
                                         <img class="team-member-img img-fluid rounded-circle p-4" src="./images/team/gali1.png" alt="Card image">
                                         <ul class="team-member-caption list-unstyled text-center pt-4 text-muted light-300">
                                             <li>Galikha Mannage</li>
+                                            <li>Research Project Member</li>
                                             <li>SE Undergarduate</li>
                                             <li>Faculty of Computing, Malabe</li>
                                         </ul>
@@ -1330,6 +1332,7 @@ https://templatemo.com/tm-578-first-portfolio
                                         <img class="team-member-img img-fluid rounded-circle p-4" src="./images/team/piyumi1.png" alt="Card image">
                                         <ul class="team-member-caption list-unstyled text-center pt-4 text-muted light-300">
                                             <li>Piyumi Fernando</li>
+                                            <li>Research Project Member</li>
                                             <li>SE Undergarduate</li>
                                             <li>Faculty of Computing, Malabe</li>
                                         </ul>
@@ -1338,6 +1341,7 @@ https://templatemo.com/tm-578-first-portfolio
                                         <img class="team-member-img img-fluid rounded-circle p-4" src="./images/team/piumi1.png" alt="Card image">
                                         <ul class="team-member-caption list-unstyled text-center pt-4 text-muted light-300">
                                             <li>Piumi Ranawansha</li>
+                                            <li>Research Project Member</li>
                                             <li>SE Undergarduate</li>
                                             <li>Faculty of Computing, Malabe</li>
                                         </ul>
